# solana-chat

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: test.yml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  encoding.ts  homeserver.ts  main.tsx  matrix.ts  program.ts  styles.css  types.ts  wallet.ts
client/src/components/: Chat.tsx  ConnectWallet.tsx  CreateGroup.tsx  FindUser.tsx  PickHomeserver.tsx  RoomDirectory.tsx  StatusScreen.tsx
client/tests/: encoding.test.ts
programs/homeserver-registry/: Cargo.toml
programs/homeserver-registry/src/: errors.rs  lib.rs
programs/homeserver-registry/src/instructions/: mod.rs  register.rs  unregister.rs
programs/homeserver-registry/src/state/: delegation.rs  mod.rs
server/: Cargo.toml  Dockerfile.solana  README-SOLANA.md
server/src/: main.rs
server/src/api/client_server/: mod.rs  session.rs  solana_auth.rs
server/src/config/: mod.rs
server/src/service/globals/: mod.rs
server/tests/: solana_auth_test.rs
server/tests-rs/: Cargo.toml
server/web-client/: index.html
tests/: homeserver-registry.test.ts
