[workspace]

[package]
name = "solana-auth-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone test crate for Solana wallet auth. Separated from the main
# Conduit crate so we can compile and run tests without building the full
# homeserver (which OOMs the linker on low-RAM machines).

# No default binary target
autobins = false

[dependencies]
bs58 = "0.5"
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"

[lib]
name = "solana_auth_tests"
path = "src/main.rs"
